complete most function of demo page

--- a/src/app/components/header-main/header-main.component.html
+++ b/src/app/components/header-main/header-main.component.html
@@ -1,5 +1,5 @@
 <div class="header-main">
-    <div class="modelArts-header-container">
+    <div class="modelArts-header-container" (click)="click('')">
         <img src={{logoSvg}} />
         <div class="logo-text">{{consoleName}}</div>
     </div>
