finish run function+fix webpack

--- a/src/app/components/solution/solution.component.html
+++ b/src/app/components/solution/solution.component.html
@@ -2,13 +2,13 @@
 <div class="demo-page">
   <as-split direction="horizontal">
     <as-split-area [size]="100" class="main-container-body">
-      <as-split direction="vertical">
+      <as-split direction="vertical" (dragEnd)="handleGutterEnd($event, 'center')"
+        (dragStart)="handleGutterStart($event)" gutterDblClickDuration="500">
         <app-tool-bar-solution #toolBarSolution (newItemEvent)="getChildData($event)" [hasUndo]="hasUndo"
           [hasRedo]="hasRedo" [onUndoButtonClick]="handleUndoButtonClick" [onRedoButtonClick]="handleRedoButtonClick"
           [onZoomInButtonClick]="handleZoomInButtonClick" [onZoomOutButtonClick]="handleZoomOutButtonClick"
           [onZoomResetButtonClick]="handleZoomResetButtonClick" [onZoomFitButtonClick]="handleZoomFitButtonClick"
-          [onSwitchDirectionButtonClick]="handleSwitchDirectionButtonClick"
-          >
+          [onSwitchDirectionButtonClick]="handleSwitchDirectionButtonClick" [onRunButtonClick]="handleRunButtonClick">
         </app-tool-bar-solution>
         <as-split-area [size]="70">
           <div class="graph">
@@ -16,16 +16,17 @@
               [registerGetSvg]="registerGetSvg" [registerZoomInButtonClick]="registerZoomInButtonClick"
               [registerZoomOutButtonClick]="registerZoomOutButtonClick"
               [registerZoomFitButtonClick]="registerZoomFitButtonClick"
-              [registerZoomResetButtonClick]="registerZoomResetButtonClick" ></app-graph>
+              [registerZoomResetButtonClick]="registerZoomResetButtonClick"
+              [registerNodeAttributeChange]="registerNodeAttributeChange" [onTextChange]="handleTextChange"></app-graph>
           </div>
         </as-split-area>
         <as-split-area [size]="30">
           <app-text-editor #textEditor [dotSrc]="dotSrc" [onTextChange]="handleTextChange"
             [onFocus]="handleTextEditorFocus" [onBlur]="handleTextEditorBlur"
             [selectedGraphComponents]="selectedGraphComponents" [registerUndo]="registerUndo"
-            [registerRedo]="registerRedo" [registerUndoReset]="registerUndoReset" [registerResize]="registerEditorResize"
-            [registerSwitchDirectionButtonClick]="registerSwitchDirectionButtonClick"
-            >
+            [registerRedo]="registerRedo" [registerUndoReset]="registerUndoReset"
+            [registerResize]="registerEditorResize"
+            [registerSwitchDirectionButtonClick]="registerSwitchDirectionButtonClick">
           </app-text-editor>
         </as-split-area>
       </as-split>
