--- a/src/app/components/management/management.component.html
+++ b/src/app/components/management/management.component.html
@@ -1,4 +1,5 @@
-<div>
+<app-header-main #header [active]="page"></app-header-main>
+<div class="demo-page">
   <div class="tasklist-search-box-div">
     <div class="tasklist-search-box-block">
       <button class="tasklist-button" type="button" tiButton autofocus (click)="openCreateTask(createTaskModal)">
