--- a/src/app/components/solution/solution.component.html
+++ b/src/app/components/solution/solution.component.html
@@ -1,17 +1,19 @@
-<app-header-main #header></app-header-main>
-<div class="demo-page">
+<app-header-main #header [active]="page"></app-header-main>
+<div class="demo-page" id="demo-page">
   <as-split direction="horizontal">
     <as-split-area [size]="100" class="main-container-body">
       <as-split direction="vertical" (dragEnd)="handleGutterEnd($event, 'center')"
         (dragStart)="handleGutterStart($event)" gutterDblClickDuration="500">
-        <app-tool-bar-solution #toolBarSolution (newItemEvent)="getChildData($event)" [hasUndo]="hasUndo"
-          [hasRedo]="hasRedo" [onUndoButtonClick]="handleUndoButtonClick" [onRedoButtonClick]="handleRedoButtonClick"
-          [onZoomInButtonClick]="handleZoomInButtonClick" [onZoomOutButtonClick]="handleZoomOutButtonClick"
-          [onZoomResetButtonClick]="handleZoomResetButtonClick" [onZoomFitButtonClick]="handleZoomFitButtonClick"
-          [onSwitchDirectionButtonClick]="handleSwitchDirectionButtonClick" [onRunButtonClick]="handleRunButtonClick">
+        <app-tool-bar-solution #toolBarSolution id="toolBarSolution" (newItemEvent)="getChildData($event)"
+          [hasUndo]="hasUndo" [hasRedo]="hasRedo" [onUndoButtonClick]="handleUndoButtonClick"
+          [onRedoButtonClick]="handleRedoButtonClick" [onZoomInButtonClick]="handleZoomInButtonClick"
+          [onZoomOutButtonClick]="handleZoomOutButtonClick" [onZoomResetButtonClick]="handleZoomResetButtonClick"
+          [onZoomFitButtonClick]="handleZoomFitButtonClick"
+          [onSwitchDirectionButtonClick]="handleSwitchDirectionButtonClick" [onRunButtonClick]="handleRunButtonClick"
+          [onOpenTutorial]="handleTutorials">
         </app-tool-bar-solution>
         <as-split-area [size]="70">
-          <div class="graph">
+          <div class="graph" id="graph">
             <app-graph [dotSrc]="dotSrc" [isResizing]="isResizing" [onInitialized]="handleGraphInitialized"
               [registerGetSvg]="registerGetSvg" [registerZoomInButtonClick]="registerZoomInButtonClick"
               [registerZoomOutButtonClick]="registerZoomOutButtonClick"
@@ -20,11 +22,10 @@
               [registerNodeAttributeChange]="registerNodeAttributeChange" [onTextChange]="handleTextChange"></app-graph>
           </div>
         </as-split-area>
-        <as-split-area [size]="30">
-          <app-text-editor #textEditor [dotSrc]="dotSrc" [onTextChange]="handleTextChange"
-            [onFocus]="handleTextEditorFocus" [onBlur]="handleTextEditorBlur"
-            [selectedGraphComponents]="selectedGraphComponents" [registerUndo]="registerUndo"
-            [registerRedo]="registerRedo" [registerUndoReset]="registerUndoReset"
+        <as-split-area [size]="30" #textEditor id="textEditor">
+          <app-text-editor [dotSrc]="dotSrc" [onTextChange]="handleTextChange" [onFocus]="handleTextEditorFocus"
+            [onBlur]="handleTextEditorBlur" [selectedGraphComponents]="selectedGraphComponents"
+            [registerUndo]="registerUndo" [registerRedo]="registerRedo" [registerUndoReset]="registerUndoReset"
             [registerResize]="registerEditorResize"
             [registerSwitchDirectionButtonClick]="registerSwitchDirectionButtonClick">
           </app-text-editor>
