--- a/src/app/components/first/first.component.less
+++ b/src/app/components/first/first.component.less
@@ -61,6 +61,7 @@
   width: 100px;
   margin: 20px 20px 0 20px;
   background-size: contain;
+  background-repeat: no-repeat;
   background-image: url("../../../assets/example.svg");
 }
 .icon-example:hover{
@@ -71,6 +72,7 @@
   width: 100px;
   margin: 20px 20px 0 20px;
   background-size: contain;
+  background-repeat: no-repeat;
   background-image: url("../../../assets/arrange.svg");
 }
 .icon-arrange:hover{
@@ -81,6 +83,7 @@
   width: 100px;
   margin: 20px 20px 0 20px;
   background-size: contain;
+  background-repeat: no-repeat;
   background-image: url("../../../assets/task.svg");
 }
 .icon-task:hover{
