--- a/src/app/components/management/management.component.less
+++ b/src/app/components/management/management.component.less
@@ -2,6 +2,14 @@
   width: 600px;
 }
 
+.demo-page {
+  padding : 0px;
+  height  : 100%-6px;
+  width   : 100%;
+  top     : 50px;
+  position: absolute;
+}
+
 .mb10 {
   margin-bottom: 10px;
 }
