--- a/src/app/pages/main/main.component.less
+++ b/src/app/pages/main/main.component.less
@@ -1,3 +1,11 @@
+.demo-page {
+  padding : 0px;
+  height  : 100%-6px;
+  width   : 100%;
+  top     : 50px;
+  position: absolute;
+}
+
 img {
   margin-right: 8px;
 }
