--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,18 +1,4 @@
 <app-header-main #header [active]="page"></app-header-main>
-<!-- <div class="model-box-tabs">
-  <ul class="ti3-tabs">
-    <li [ngClass]="{'ti3-tab-active': activeEditor}">
-      <a class="nav-link" href="javascript:void(0);" oncontext="return false" (click)="click('editor')">
-        {{ 'editor' | translate}}
-      </a>
-    </li>
-    <li [ngClass]="{'ti3-tab-active': activeTaskLists}">
-      <a class="nav-link" href="javascript:void(0);" oncontext="return false" (click)="click('taskLists')">
-        {{'taskLists' | translate}}
-      </a>
-    </li>
-  </ul>
-</div> -->
 <div class="demo-page">
   <div class="task-scheduling-panel" style="height: 100%; width: 100%;" [ngClass]="{'editor-disactive': !activeEditor}">
     <as-split #splitH direction="horizontal" (dragEnd)="handleGutterEnd($event, 'left')"
@@ -34,7 +20,7 @@
               [onRedoButtonClick]="handleRedoButtonClick" [onZoomInButtonClick]="handleZoomInButtonClick"
               [onZoomOutButtonClick]="handleZoomOutButtonClick" [onZoomResetButtonClick]="handleZoomResetButtonClick"
               [onZoomFitButtonClick]="handleZoomFitButtonClick" [onConfirmNameChange]="handleSaveAsToBrowser.bind(this)"
-              [onNewButtonClick]="handleNewClick.bind(this)"
+              [onNewButtonClick]="handleNewClick.bind(this)" [onRunButtonClick]="handleRunButtonClick"
               [onSwitchDirectionButtonClick]="handleSwitchDirectionButtonClick"
               [showGraphSettingDialog]="showGraphSettingDialog.bind(this)"
               [showSelectDialog]="showSelectDialog.bind(this)" [showSolutionDialog]="showSolutionDialog.bind(this)"
