--- a/src/app/components/solution/solution.component.less
+++ b/src/app/components/solution/solution.component.less
@@ -14,3 +14,15 @@
   bottom: 0;
   overflow: hidden;
 }
+
+.half-drawer {
+  padding: 12px 16px 0 12px;
+  position: fixed;
+  right: 0;
+  top: 50px;
+  bottom: 0;
+  background-color: #fff;
+  width: 360px;
+  box-shadow: -8px 0 40px 0 rgba(0, 0, 0, 0.2);
+  overflow: auto;
+}
