--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -25,7 +25,7 @@
               [showGraphSettingDialog]="showGraphSettingDialog.bind(this)"
               [showSelectDialog]="showSelectDialog.bind(this)" [showSolutionDialog]="showSolutionDialog.bind(this)"
               [projects]="projects" [oldName]="name" (projectsEmmiter)="getToolBarProjectsChange($event)"
-              [solutionList]="solutionList">
+              [solutionList]="solutionList" [projectName]="projectName">
             </app-tool-bar>
 
             <div style="flex: 2;" class="graph">
